# flask_shop_system

./: .dockerignore  .env.example  .env.production  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config.py  deploy.sh  docker-compose.yml  fix_image_extensions.py  gunicorn_config.py  init_db.py  init_db.sql  main.py  pyproject.toml
app/: __init__.py  extensions.py  forms.py
app/models/: __init__.py  cart.py  order.py  product.py  user.py
app/routes/: __init__.py  admin.py  auth.py  cart.py  main.py  order.py  product.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/admin/: base.html  dashboard.html  order_detail.html  orders.html  product_form.html  products.html  statistics.html  user_detail.html  user_edit.html  users.html
app/templates/auth/: change_password.html  delete_account.html  edit_profile.html  login.html  profile.html  register.html
app/templates/cart/: index.html
app/templates/email/: order_confirmation.html
app/templates/errors/: 404.html  500.html
app/templates/main/: index.html
app/templates/order/: checkout.html  detail.html  list.html
app/templates/product/: detail.html  list.html
app/utils/: decorators.py  files.py  helpers.py
docs/: Docker部署指南.md  Flask购物网站功能测试指南.md  Flask购物网站开发分步实施指南.md  configuration_guide.md  development_guide.md  project_overview.md  参考文献.md  网络应用架构设计与开发课程项目设计要求.md  订单系统实施总结.md  部署检查清单.md
migrations/versions/: 311c74a150e1_初始迁移.py
nginx/: nginx.conf
nginx/conf.d/: flask_shop.conf
tests/: __init__.py
(+2 files in other folders)
